<resources>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_leave">Leave</string>
    <string name="menu_rejoin">Rejoin</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_unarchive">Unarchive</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_whois">Whois</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_reconnect">Reconnect</string>
    <string name="menu_editconnection">Edit Connection</string>
    <string name="menu_identify">Identify Nickname</string>
    <string name="menu_ignore_list">Ignore List</string>
    <string name="menu_ban_list">Ban List</string>
    <string name="menu_add_network">Add Network</string>
    <string name="menu_display_options">Display Options</string>
    <string name="menu_photo">Insert Photo</string>
    <string name="menu_invite">Invite to Channel</string>
    <string name="menu_feedback">Send Feedback</string>
    <string name="menu_create_shortcut">Create Shortcut</string>
    <string name="menu_download_logs">Download Logs</string>
    <string name="menu_rename">Rename</string>
    <string name="title_activity_message">IRCCloud</string>
    <string name="title_activity_login">Login</string>
    <string name="email">Email Address</string>
    <string name="email_enterprise">Email or Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="host">Host</string>
    <string name="imeOptions">flagNoExtractUi|actionSend</string>
    <string name="title_activity_imgur_auth">Login to Imgur</string>
    <string name="action_settings">Settings</string>
    <string name="TOS">By signing up, you agree to our <a href="https://www.irccloud.com/terms">Terms\u00A0of\u00A0Service</a></string>
    <string name="forgotPassword">Forgotten your password? <a href="#">Get\u00A0an\u00A0access\u00A0link</a></string>
    <string name="enterpriseLearnMore">Looking for the Standard Edition? <a href="#">Get\u00A0it\u00A0here</a></string>
    <string name="title_activity_uploads">File Uploads</string>
    <string name="title_activity_pastebin">Text Snippet</string>
    <string name="title_activity_pastebins">Text Snippets</string>
    <string name="title_activity_pastebin_editor">Post a Text Snippet</string>
    <string name="title_activity_pastebin_editor_edit">Edit Text Snippet</string>
    <string name="title_activity_imageviewer">Image Viewer</string>
    <string name="title_activity_video_player">Video Player</string>
    <string name="title_activity_exports">Download Logs</string>
    <string name="leak_canary_display_activity_label">IRCCloud Leaks</string>
</resources>