<!--
  ~ Copyright (c) 2013 IRCCloud, Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_photo"
        android:title="@string/menu_photo"
        android:showAsAction="never" />

    <item android:id="@+id/menu_leave"
        android:title="@string/menu_leave"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_ignore_list"
        android:title="@string/menu_ignore_list"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_ban_list"
        android:title="@string/menu_ban_list"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_channel_options"
        android:title="@string/menu_display_options"
        android:showAsAction="never" />
</menu>
