<!--
  ~ Copyright (c) 2015 IRCCloud, Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_buffer_options"
        android:title="@string/menu_display_options"
        app:showAsAction="never" />
    <item android:id="@+id/menu_editconnection"
        android:title="@string/menu_editconnection"
        app:showAsAction="never" />
    <item android:id="@+id/menu_identify"
        android:title="@string/menu_identify"
        app:showAsAction="never" />
    <item android:id="@+id/menu_disconnect"
        android:title="@string/menu_disconnect"
        app:showAsAction="never" />
</menu>
